--- a/config_example.json
+++ b/config_example.json
@@ -1,6 +1,6 @@
 {
-    "image_path": "image.jpg",
-    "image_start_coords": [741, 610],
+    "image_path": "image.png",
+    "image_start_coords": [337, 211],
     "thread_delay": 2,
     "unverified_place_frequency": "False",
     "workers": {
